--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="nz.net.catalyst.TrackAndTrace"
       android:versionCode="2"
-      android:versionName="1.1">
-    <application android:icon="@drawable/logo" android:label="@string/label" android:debuggable="true">
-  	    <activity android:name=".search.SearchFormActivity" 
-  	    			android:label="@string/searchform" >
+      android:versionName="1.1.1-SNAPSHOT">
+    <application android:label="@string/app_name" android:icon="@drawable/trackandtrace_icon"
+    				android:debuggable="false">
+  	    <activity android:name=".search.SearchFormActivity"> 
             <intent-filter>
                 <action android:name="nz.net.catalyst.TrackAndTrace.search.SearchFormActivity" />
                 <action android:name="android.intent.action.MAIN" />
@@ -14,8 +14,7 @@
         </activity>
         
   	    <activity android:name=".search.SearchResultsActivity" 
-  	    			android:configChanges="orientation"
-  	    			android:label="@string/searchresults" >
+  	    			android:configChanges="orientation"	>
             <intent-filter>
                 <action android:name="nz.net.catalyst.TrackAndTrace.search.SearchResultsActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
