--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="nz.net.catalyst.TrackAndTrace"
-      android:versionCode="2"
-      android:versionName="1.1.1-SNAPSHOT">
+      android:versionCode="3"
+      android:versionName="1.2">
     <application android:label="@string/app_name" android:icon="@drawable/trackandtrace_icon"
     				android:debuggable="false">
   	    <activity android:name=".search.SearchFormActivity"> 
@@ -25,9 +25,10 @@
 			android:label="@string/menu_preferences" />
 
     </application>
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="5" />
     <!-- permissions -->
-    <uses-permission
-        android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest> 
